css/main.scss
---
---

@import 'fonts';
@import 'colors';

@import 'about';
@import 'blog';
@import 'payment';
@import 'services';


/* General */
body {
  margin: 0;
  font-family: $font-family-base;
  background-color: $white-color;
}

.container {
  margin: 0;
  padding-top: 80px;
}

.textContainer {
  margin: auto;
  display: flex;
  justify-items: center;
  flex-flow: column wrap;
  justify-content: center;
  max-width: 800px;
}

/* Main page */
.headerImage {
  background: url(/media/photos/background-main.jpg) 0% 0% / cover;
  min-height: 600px;
  display: flex;
  align-items: center;
  opacity: 0.8;
  box-shadow: inset 0 0 0 100vmax rgba($primary-color, .3);
}

.mainTitle {
  color: $white-color;
  font-size: 55px;
  font-family: $font-family-title;
  font-weight: 300;
  text-shadow: 1px 1px 1px #666;
  text-align: center;
  margin-top: 40px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
  padding-bottom: 10px;
  padding-top: 40px;
}

.pageTitle {
  color: $primary-color;
  font-size: 50px;
  font-family: $font-family-title;
  font-weight: 300;
  margin-top: 100px;
}

.subtitle {
  color: $white-color;
  font-family: $font-family-title;
  font-weight: 300;
  margin: auto;
  text-align: center;
  font-size: 1.5em;
  line-height: 1.4em;
  padding-left: 10px;
  padding-right: 10px;

  &--motto {
    margin-top: 25px;
  }
}

.linkToAction {
  color: $accent-color;
  // text-decoration: none;
}

/* Social Media */
.socialMedia {
  list-style-type: none;
  padding-left: 0px;
  text-align: center;
  // margin-top: 50px;
  // padding-bottom: 50px;

  svg {
    fill: white;
  }

  li {
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    padding: 15px;

    img {
      width: 36px;
      opacity: 0.6;

      &:hover {
        opacity: 1.0;
      }
    }
  }
}

.footer {
  font-size: 14px;
  font-weight: 100;
  line-height: 22px;
  color: white;
  background-color: $dark-primary-color;
  margin: 0;
  height: 30px;
  padding: 22px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}


/* Common elements */
.band {
  min-height: 200px;
  font-family: $font-family-title;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;

  h2 {
    font-weight: 300;
    text-align: center;
    font-size: 36px;
    padding-top: 40px;

    &.left {
      text-align: left;
    }

    &.right {
      text-align: right;
    }
  }

  h3 {
    font-weight: 300;
  }

  &--mini {
    min-height: 0px;

    h2 {
      font-weight: 300;
      font-size: 28px;
      padding-top: 20px;
    }
  }
}

.section-photo {
  height: 350px;
  overflow: hidden;

  background-repeat: no-repeat;
  background-position-x: 50%;
  background-position-y: 100%;
  background-size: cover;

  opacity: 0.8;

  @media all and (max-width: 719px) {
    height: 200px;
  }

  &--with-margin {
    width: 100%;
    margin-top: 20px;
    margin-bottom: 20px;

    @media all and (max-width: 719px){
      // width: 100%;
    }
  }

  &--solid {
    opacity: 1.0;
  }
}

.section-paragraph {
  font-family: $font-family-base;
  font-weight: 300;
  font-size: 20px;
  margin: 0;
  text-align: center;
  max-width: 936px; // 752px;
  padding-bottom: 20px;
  line-height: 1.4;
  margin-bottom: 8px;

  &--last-paragraph{
    padding-bottom: 60px;
  }

  &--small {
    font-size: 16px;
    max-width: 600px;
    padding-bottom: 0px;

    text-align: center;
  }
}

.service-description {
  padding: 20px;
  font-weight: 200;
  font-size: 30px;
  text-align: center;
  border: 1px $primary-color solid;

  &--contrast {
    border: 1px $white-color solid;
  }

  &--pay {
    padding-top: 0px;
    width: 90%;
    max-width: 450px;
    margin-bottom: 100px;
    background-color: $grey-light-color;
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    border-radius: 5px;

    .icon {
      max-width: 150px;
      margin: 20px;
      padding-top: 10px;
    }
  }

  h2 {
    margin: 0;
  }

  p {
    margin-bottom: 0px;
    font-size: 12px;
    padding: 20px;
    font-weight: 300;
  }

  .service-price {
    font-size: 25px;
    font-weight: 300;
    font-family: $font-family-title;
    margin-bottom: 30px;
  }
}

.arrow-down {
  max-width: 50px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 10px;

  &:hover{
    cursor: pointer;
  }

  &--top {
    margin-top: 40px;
    filter: invert(1) sepia(1);
    margin-bottom: 16px;

    &:hover{
      filter: invert(0);
    }
  }
}

/* Header */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  z-index: 999;
  width: 100%;
  background-color: $white-color;
  box-shadow: 0 3px 7px 0 rgba(0,0,0,.1);
}

.logo {
  font-family: $font-family-title;
  font-weight: 900;
  font-size: 40px;
  padding-left: 20px;

  a {
    text-decoration: none;
    color: $accent-light-color;

    &:hover{
      color: $accent-color;
    }
  }
}

/* Navbar */
.navbar {
  display: flex;
  justify-content: flex-end;
  list-style: none;
  font-size: 20px;
  padding-left: 0px;
  padding-top: 20px;
  padding-bottom: 20px;

  &--hidden {
    display: none;
  }

  @media all and (max-width: 719px) {
    display: none;
    flex-direction: column;
    align-items: inherit;
    justify-content: flex-start;
    height: 100vh;
    width: 100vw;
    position: absolute;
    background: #E9F1F7;
    top: 75px;
    opacity: 0.9;
    font-size: 24px;
    line-height: 60px;

    &--is-visible{
      display: block;
    }
  }

  .navbar__item {
    display: inline;
    margin-right: 30px;

    @media all and (max-width: 719px) {
      margin-right: 0px;
    }

    .navbar__item-link {
      color: $primary-color;
      text-transform: uppercase;
      text-decoration: none;
      &:hover {
        text-decoration: none;
        color: $accent-light-color;
      }
    }
  }
}

#mobileMenu {
  padding: 40px 20px;

  @media all and (min-width: 720px) {
    display: none;
  }

  span {
    display: block;
    width: 33px;
    height: 4px;
    margin-top: 5px;
    background: $accent-light-color;
    border-radius: 3px;
    cursor: pointer;
  }

}

/* Call to Action buttons */
.services {
  padding: 0px;
  list-style-type: none;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  margin-bottom: 50px;
  justify-content: center;

  button {
    background-color: $accent-light-color;
    font-family: $font-family-title;
    font-size: 30px;
    border: none;
    padding: 15px 32px;
    text-align: center;
    display: inline-block;
    margin: 15px;
    width: 250px;
    height: 140px;
    cursor: pointer;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    &:hover {
      color: white;
      background-color: $secondary-color;

      img {
        width: 45px;
        height: 45px;
      }
    }

    img {
      width: 40px;
      height: 40px;
      padding: 10px;
    }
  }
}

